--- a/loopstudios-landing-page-main/sass/main.scss
+++ b/loopstudios-landing-page-main/sass/main.scss
@@ -14,6 +14,10 @@
 *::after {
 	box-sizing: inherit;
 }
+html,
+body {
+	overflow-x: hidden;
+}
 
 html {
 	box-sizing: border-box;
